fix: `unset` Full Calendar `z-index` values

--- a/webapp/src/components/calendar/fullcalendar.scss
+++ b/webapp/src/components/calendar/fullcalendar.scss
@@ -5,11 +5,9 @@
     margin-bottom: 10px;
     overflow: auto;
 
-    // reverse the order, which is already reversed when rendered by Full Calendar
-    // this is a pseudo-hack to allow the CSS stacking contexts to play nicely
-    .fc-daygrid-day-events {
-        display: flex;
-        flex-direction: column-reverse;
+    .fc-daygrid-event,
+    .fc-event-main {
+        @include z-index(unset);
     }
 
     .fc-daygrid-event,
